refactor(queryengine): harden metadata contracts